restores the file path into DB

--- a/app/webroot/test/upload.html
+++ b/app/webroot/test/upload.html
@@ -9,9 +9,9 @@
 <p>Specify Files you wanna upload.</p>
 <form method="post" action="../index.php?dc_action=image/upload" enctype="multipart/form-data">
     <input type="hidden" name="MAX_FILE_SIZE" value=1024000>
-    <input type="file" name="uploadFiles[]"><br>
-    <input type="file" name="uploadFiles[]"><br>
-    <input type="file" name="uploadFiles[]"><br>
+    <input type="file" name="uploadFiles[]" multiple><br>
+    password
+    <textarea name="password" rows="1" cols="30"></textarea><br>
     <input type="submit" value="Submit"><br>
 </form>
 
